Adding testing for DashboardController and DashboardServiceImpl